--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "onion.homeworkplanner"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 10
-        versionName "8.5"
+        versionCode 13
+        versionName '13.0'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
